set routes to insert referee to new game and update the api
